@@ -62,7 +62,7 @@ static int
 posix_permissions(const acl_header *header, int entries, int *extra, int *mode) {
 	int acl_seen = 0;
 	if (le32(header->version) != 2) {
-		pseudo_diag("Fatal: ACL support no available for header versio %d.\n",
+		pseudo_diag("Fatal: ACL support no available for header version %d.\n",
 			le32(header->version));
 		return 1;
 	}
